--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mysql2": "^3.5.2",
     "sequelize": "^6.32.1"
   },
